--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/clean"]
 	path = themes/clean
 	url = git@github.com:PmaFynn/clean.git
+[submodule "content"]
+	path = content
+	url = git@github.com:PmaFynn/content.git
